  with a -). (Ilia)
- Fixed bug #44440 (st_blocks undefined under BeOS). (Felipe)
- Fixed bug #44394 (Last two bytes missing from output). (Felipe)
- Fixed bug #44388 (Crash inside exif_read_data() on invalid images) (Ilia)
- Fixed bug #44373 (PDO_OCI extension compile failed). (Felipe)
- Fixed bug #43677 (Inconsistent behaviour of include_path set with
  php_value). (manuel at mausz dot at)
- Fixed bug #42177 (Warning "array_merge_recursive(): recursion detected" comes 
  again...). (Felipe)
- Fixed bug #41828 (Failing to call RecursiveIteratorIterator::__construct() 
  causes a sefault). (Etienne)

06 Mar 2008, PHP 5.2.6RC2
- Fixed bug #44333 (SEGFAULT when using mysql_pconnect() with client_flags).
  (Felipe)
- Fixed bug #44306 (Better detection of MIPS processors on Windows). (Ilia)
- Fixed bug #44166 (Parameter handling flaw in PDO::getAvailableDrivers()).
  (Ilia)
- Fixed bug #42505 (new sendmail default breaks on Netware platform) 
  (Guenter Knauf)
- Fixed bug #40013 (php_uname() does not return nodename on Netware
  (Guenter Knauf)

27 Feb 2008, PHP 5.2.6RC1
- Fixed security issue detailed in CVE-2008-0599. (Rasmus)
- Fixed potential memleak in stream filter parameter for zlib filter. (Greg)
- Added Reflection API metadata for the methods of the DOM classes. (Sebastian)
- Fixed weird behavior in CGI parameter parsing. (Dmitry, Hannes Magnusson)
- Fixed a safe_mode bypass in cURL identified by Maksymilian Arciemowicz.
  (Ilia)
- Fixed a bug with PDO::FETCH_COLUMN|PDO::FETCH_GROUP mode when a column # by
  which to group by data is specified. (Ilia)
- Fixed segfault in filter extension when using callbacks. (Arnar Mar Sig,
  Felipe)
- Upgraded PCRE to version 7.6 (Nuno)


- Fixed bug #44242 (metaphone('CMXFXM') crashes PHP). (Felipe)
- Fixed bug #44233 (MSG_PEEK undefined under BeOS R5). (jonathonfreeman at
  gmail dot com, Ilia)
- Fixed bug #44216 (strftime segfaults on large negative value). (Derick)